@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-version = "0.37.2"
+version = "0.37.3"
 name = "Clarity"
 requires-python = ">=3.12"
 readme = "README.md"
